--- a/mp08/p9/index.html
+++ b/mp08/p9/index.html
@@ -53,7 +53,7 @@
     
       <google-codelab-step label="Crea el Grafo de Navegación" duration="0">
         <p class="image-container"><img style="width: 491.00px" src="img\487b11dcbe47e5b2.png"></p>
-<p>Añade los fragments al grafo de navegación</p>
+<h2 is-upgraded>Añade los fragments al grafo de navegación</h2>
 <p class="image-container"><img style="width: 736.40px" src="img\3c2b4e9eaaeb547.png"></p>
 <h2 is-upgraded><img style="width: 313.00px" src="img\aa47d8a6e6cb52.png"></h2>
 <h2 is-upgraded><img style="width: 489.00px" src="img\73626b22b70e2de0.png"></h2>
@@ -69,6 +69,7 @@
     
       <google-codelab-step label="Añade el NavHost" duration="0">
         <p class="image-container"><img style="width: 557.00px" src="img\c5e8efac28859df.png"></p>
+<p>En el layout de la MainActivity (<code>activity_main.xml</code>) añade el &lt;fragment&gt; NavHost:</p>
 <pre><code>&lt;?xml version=&#34;1.0&#34; encoding=&#34;utf-8&#34;?&gt;
 &lt;androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=&#34;http://schemas.android.com/apk/res/android&#34;
