--- a/mp08/p10/index.html
+++ b/mp08/p10/index.html
@@ -36,6 +36,7 @@
 <p class="image-container"><img style="width: 708.00px" src="img\1736345fcbad40b0.png"></p>
 <p>C.O.D.E: <a href="https://github.com/gerardfp/DrawerZero" target="_blank">https://github.com/gerardfp/DrawerZero</a></p>
 <p>+info: <a href="https://developer.android.com/guide/navigation/navigation-ui" target="_blank">https://developer.android.com/guide/navigation/navigation-ui</a></p>
+<p class="image-container"><img style="width: 242.00px" src="img\1ad1bb70eb06c283.gif"></p>
 
 
       </google-codelab-step>
@@ -516,7 +517,7 @@ public CharSequence getPageTitle(int position) {
    return &#34;B&#34;;
 }</code></pre>
 <p>Debería quedar así:</p>
-<p><img style="width: 242.00px" src="img\f72a9242b6646894.gif"><br><br><br><br>NOTA: Si quieres que el TabLayout quede &#34;integrado&#34; en la AppBar, puedes cambiarle el color de fondo para que quede el mismo que la AppBar. Tendrás que eliminar la &#34;elevación&#34; (el sombreado) de la AppBar:</p>
+<p><img style="width: 242.00px" src="img\f72a9242b6646894.gif"><br><br><br><br><strong>NOTA</strong>: Si quieres que el TabLayout quede &#34;integrado&#34; en la AppBar, puedes cambiarle el color de fondo para que quede el mismo que la AppBar. Tendrás que eliminar la &#34;elevación&#34; (el sombreado) de la AppBar:</p>
 <ol type="1" start="1">
 <li>Cambia los colores del TabLayout (<code>res/layout/fragment_bottom2.xml</code>):<br></li>
 </ol>
